--- a/index.html
+++ b/index.html
@@ -1198,6 +1198,22 @@
 </form>
     </div>
   </div>
+<div id="suggestionModal" class="fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center z-50 hidden">
+  <div class="bg-white rounded-xl p-6 max-w-md w-full relative shadow-lg">
+    <button onclick="closeSuggestionModal()" class="absolute top-2 right-2 text-gray-500 hover:text-gray-700">
+      <i class="fas fa-times"></i>
+    </button>
+    <h2 class="text-lg font-semibold mb-4 text-primary translatable">Ürün Öneri Formu</h2>
+    <form id="suggestionForm" class="space-y-4">
+      <input type="hidden" name="formType" value="suggest">
+      <input type="text" name="name" placeholder="Ad Soyad" class="w-full border p-2 rounded" required>
+      <input type="email" name="email" placeholder="E-posta" class="w-full border p-2 rounded" required>
+      <input type="text" name="organization" placeholder="Kurum Adı" class="w-full border p-2 rounded">
+      <textarea name="message" placeholder="Ürün Öneri Detayınız" class="w-full border p-2 rounded h-24"></textarea>
+      <button type="submit" class="bg-primary text-white px-4 py-2 rounded hover:bg-opacity-90 translatable">Gönder</button>
+    </form>
+  </div>
+</div>
 <form id="suggestionForm" class="space-y-4">
   <input type="text" placeholder="Ad Soyad" name="name" class="w-full border p-2 rounded" required>
   <input type="email" placeholder="E-posta" name="email" class="w-full border p-2 rounded" required>
