--- a/index.html
+++ b/index.html
@@ -135,13 +135,15 @@
       </div>
     </div>
   
-    <div id="mobile-products" class="space-y-2 mt-2 px-2 sm:hidden">
+<div id="mobile-products" class="space-y-2 mt-2 px-2 sm:hidden">
 
+  <!-- Yapay Zeka -->
   <div class="group">
-    <button onclick="toggleDropdown(this)" class="w-full text-left text-primary font-semibold flex justify-between items-center">
-      <span class="translatable">Yapay Zeka</span> <i class="fas fa-chevron-down ml-2 text-xs"></i>
+    <button onclick="toggleMobileDropdown(this)" class="w-full text-left text-primary font-semibold flex justify-between items-center py-3 border-b border-gray-200">
+      <span class="translatable">Yapay Zeka</span>
+      <i class="fas fa-chevron-down ml-2 text-xs"></i>
     </button>
-    <div class="dropdown-list hidden pl-4 pt-2 text-sm space-y-1">
+    <div class="dropdown-list hidden pl-4 pt-2 text-sm space-y-1 bg-gray-50 rounded-b-md">
       <a href="#pangram" class="block text-gray-700 translatable">Pangram</a>
       <a href="#chatpdf" class="block text-gray-700 translatable">ChatPDF</a>
       <a href="#wonders" class="block text-gray-700 translatable">Wonders</a>
@@ -149,12 +151,14 @@
       <a href="#transleyt" class="block text-gray-700 translatable">Transleyt</a>
     </div>
   </div>
-  
+
+  <!-- Sağlık -->
   <div class="group">
-    <button onclick="toggleDropdown(this)" class="w-full text-left text-primary font-semibold flex justify-between items-center translatable">
-	Sağlık</span> <i class="fas fa-chevron-down ml-2 text-xs"></i>
+    <button onclick="toggleMobileDropdown(this)" class="w-full text-left text-primary font-semibold flex justify-between items-center py-3 border-b border-gray-200">
+      <span class="translatable">Sağlık</span>
+      <i class="fas fa-chevron-down ml-2 text-xs"></i>
     </button>
-    <div class="dropdown-list hidden pl-4 pt-2 text-sm space-y-1">
+    <div class="dropdown-list hidden pl-4 pt-2 text-sm space-y-1 bg-gray-50 rounded-b-md">
       <a href="#primal-pictures" class="block text-gray-700 translatable">Primal Pictures</a>
       <a href="#lecturio" class="block text-gray-700 translatable">Lecturio</a>
       <a href="#nejmhealer" class="block text-gray-700 translatable">NEJMHealer</a>
@@ -162,61 +166,71 @@
       <a href="#cochrane-library" class="block text-gray-700 translatable">Cochrane Library</a>
     </div>
   </div>
-  
+
+  <!-- Mühendislik -->
   <div class="group">
-    <button onclick="toggleDropdown(this)" class="w-full text-left text-primary font-semibold flex justify-between items-center">
-      <span class="translatable">Mühendislik</span> <i class="fas fa-chevron-down ml-2 text-xs"></i>
+    <button onclick="toggleMobileDropdown(this)" class="w-full text-left text-primary font-semibold flex justify-between items-center py-3 border-b border-gray-200">
+      <span class="translatable">Mühendislik</span>
+      <i class="fas fa-chevron-down ml-2 text-xs"></i>
     </button>
-    <div class="dropdown-list hidden pl-4 pt-2 text-sm space-y-1">
+    <div class="dropdown-list hidden pl-4 pt-2 text-sm space-y-1 bg-gray-50 rounded-b-md">
       <a href="#accessengineering" class="block text-gray-700 translatable">AccessEngineering</a>
       <a href="#biorender" class="block text-gray-700 translatable">BioRender</a>
       <a href="#wiley-dergiler" class="block text-gray-700 translatable">Wiley Dergiler</a>
       <a href="#wiley-kitaplar" class="block text-gray-700 translatable">Wiley Kitaplar</a>
     </div>
   </div>
-  
+
+  <!-- Fen & Matematik -->
   <div class="group">
-    <button onclick="toggleDropdown(this)" class="w-full text-left text-primary font-semibold flex justify-between items-center">
-      <span class="translatable">Fen & Matematik</span> <i class="fas fa-chevron-down ml-2 text-xs"></i>
+    <button onclick="toggleMobileDropdown(this)" class="w-full text-left text-primary font-semibold flex justify-between items-center py-3 border-b border-gray-200">
+      <span class="translatable">Fen & Matematik</span>
+      <i class="fas fa-chevron-down ml-2 text-xs"></i>
     </button>
-    <div class="dropdown-list hidden pl-4 pt-2 text-sm space-y-1">
+    <div class="dropdown-list hidden pl-4 pt-2 text-sm space-y-1 bg-gray-50 rounded-b-md">
       <a href="#jove-dergiler" class="block text-gray-700 translatable">JoVE Research</a>
       <a href="#jove-education" class="block text-gray-700 translatable">JoVE Education</a>
       <a href="#wiley-dergiler" class="block text-gray-700 translatable">Wiley Dergiler</a>
       <a href="#wiley-kitaplar" class="block text-gray-700 translatable">Wiley Kitaplar</a>
     </div>
   </div>
-  
+
+  <!-- Sosyal Bilimler -->
   <div class="group">
-    <button onclick="toggleDropdown(this)" class="w-full text-left text-primary font-semibold flex justify-between items-center">
-      <span class="translatable">Sosyal Bilimler</span> <i class="fas fa-chevron-down ml-2 text-xs"></i>
+    <button onclick="toggleMobileDropdown(this)" class="w-full text-left text-primary font-semibold flex justify-between items-center py-3 border-b border-gray-200">
+      <span class="translatable">Sosyal Bilimler</span>
+      <i class="fas fa-chevron-down ml-2 text-xs"></i>
     </button>
-    <div class="dropdown-list hidden pl-4 pt-2 text-sm space-y-1">
+    <div class="dropdown-list hidden pl-4 pt-2 text-sm space-y-1 bg-gray-50 rounded-b-md">
       <a href="#jove-dergiler" class="block text-gray-700 translatable">JoVE Research</a>
       <a href="#jove-education" class="block text-gray-700 translatable">JoVE Education</a>
     </div>
   </div>
-  
+
+  <!-- İş & Hukuk -->
   <div class="group">
-    <button onclick="toggleDropdown(this)" class="w-full text-left text-primary font-semibold flex justify-between items-center">
-      <span class="translatable">İş & Hukuk</span> <i class="fas fa-chevron-down ml-2 text-xs"></i>
+    <button onclick="toggleMobileDropdown(this)" class="w-full text-left text-primary font-semibold flex justify-between items-center py-3 border-b border-gray-200">
+      <span class="translatable">İş & Hukuk</span>
+      <i class="fas fa-chevron-down ml-2 text-xs"></i>
     </button>
-    <div class="dropdown-list hidden pl-4 pt-2 text-sm space-y-1">
+    <div class="dropdown-list hidden pl-4 pt-2 text-sm space-y-1 bg-gray-50 rounded-b-md">
       <a href="#jove-business" class="block text-gray-700 translatable">JoVE Business</a>
     </div>
   </div>
-  
+
+  <!-- Sanat -->
   <div class="group">
-    <button onclick="toggleDropdown(this)" class="w-full text-left text-primary font-semibold flex justify-between items-center">
-      <span class="translatable">Sanat</span> <i class="fas fa-chevron-down ml-2 text-xs"></i>
+    <button onclick="toggleMobileDropdown(this)" class="w-full text-left text-primary font-semibold flex justify-between items-center py-3 border-b border-gray-200">
+      <span class="translatable">Sanat</span>
+      <i class="fas fa-chevron-down ml-2 text-xs"></i>
     </button>
-    <div class="dropdown-list hidden pl-4 pt-2 text-sm space-y-1">
+    <div class="dropdown-list hidden pl-4 pt-2 text-sm space-y-1 bg-gray-50 rounded-b-md">
       <a href="#klasik-muzik" class="block text-gray-700 translatable">Klasik Müzik Koleksiyonu</a>
       <a href="#caz-koleksiyonu" class="block text-gray-700 translatable">Caz Koleksiyonu</a>
     </div>
   </div>
-  
-    </div>
+
+</div>
   </div>
   
                 <a class="hover:text-primary translatable" href="#brochures">Broşürler</a>
