--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="LibEdge offers premium education and research solutions, including AI tools, databases, books and academic journals for institutions in Türkiye and the Middle East.">
-    <title class="translatable">LibEdge Eğitim ve Danışmanlık</title>
+    <title>LibEdge Eğitim ve Danışmanlık</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -21,7 +21,7 @@
         <div class="flex flex-wrap items-center space-x-4 mb-2 sm:mb-0">
             <div class="flex items-center">
                 <i class="fas fa-envelope mr-2 text-purple-300" aria-hidden="true"></i>
-                <span class="text-xs sm:text-sm">info@libedge.com</span>
+                <span class="text-xs sm:text-sm"><a href="mailto:info@libedge.com">info@libedge.com</a></span>
             </div>
             <div class="flex flex-col">
                 <div class="flex items-center">
@@ -151,8 +151,8 @@
   </div>
   
   <div class="group">
-    <button onclick="toggleDropdown(this)" class="w-full text-left text-primary font-semibold flex justify-between items-center translatable">
-	Sağlık</span> <i class="fas fa-chevron-down ml-2 text-xs"></i>
+    <button onclick="toggleDropdown(this)" class="w-full text-left text-primary font-semibold flex justify-between items-center">
+	<span class="translatable">Sağlık</span> <i class="fas fa-chevron-down ml-2 text-xs"></i>
     </button>
     <div class="dropdown-list hidden pl-4 pt-2 text-sm space-y-1">
       <a href="#primal-pictures" class="block text-gray-700 translatable">Primal Pictures</a>
@@ -1082,7 +1082,7 @@
 
                     <p class="mb-4 flex items-center">
                         <i class="fas fa-envelope mr-3 text-lg"></i>
-                        <span class="translatable">info@libedge.com.tr</span>
+                <span class="text-xs sm:text-sm"><a href="mailto:info@libedge.com">info@libedge.com</a></span>
                     </p>
                     <p class="mb-4 flex items-center">
                         <i class="fas fa-phone mr-3 text-lg"></i>
