--- a/index.html
+++ b/index.html
@@ -252,9 +252,8 @@
             </div>
         </div>
 
-        <!-- SLIDE 2: Yeni Slide (Örnek - Görsel ve farklı mesaj) -->
-        <div class="hero-slide">
-            <img src="assets/images/hero-slide-2.jpg" alt="LibEdge İş Ortaklıkları" class="hero-bg-image" loading="lazy">
+        <!-- SLIDE 2: Gradient Arka Plan -->
+        <div class="hero-slide" style="background: linear-gradient(135deg, #1a2a6c 0%, #b21f1f 50%, #fdbb2d 100%);">
             <div class="hero-content">
                 <h1 class="hero-header translatable"><span class="font-normal">Öncü Yayıncılarla İş Birliği</span></h1>
                 <p class="hero-subtitle translatable">Dünyanın önde gelen akademik yayıncıları ve teknoloji sağlayıcıları ile stratejik iş birlikleri. Kurumunuz için en güncel ve nitelikli içeriğe erişin.</p>
@@ -268,9 +267,8 @@
             </div>
         </div>
 
-        <!-- SLIDE 3: Yeni Slide (Örnek - Başka bir görsel ve mesaj) -->
-        <div class="hero-slide">
-            <img src="assets/images/hero-slide-3.jpg" alt="LibEdge Eğitim Çözümleri" class="hero-bg-image" loading="lazy">
+        <!-- SLIDE 3: Gradient Arka Plan -->
+        <div class="hero-slide" style="background: linear-gradient(135deg, #0f2027 0%, #203a43 50%, #2c5364 100%);">
             <div class="hero-content">
                 <h1 class="hero-header translatable"><span class="font-normal">Eğitim ve Danışmanlık Çözümleri</span></h1>
                 <p class="hero-subtitle translatable">Kütüphane personeli ve akademisyenler için özelleştirilmiş eğitim programları ve stratejik danışmanlık hizmetleri.</p>
