--- a/index.html
+++ b/index.html
@@ -99,6 +99,7 @@
         <a href="#nejmhealer" class="block px-2 py-1 text-sm hover:text-primary translatable">NEJMHealer</a>
         <a href="#accessmedical" class="block px-2 py-1 text-sm hover:text-primary translatable">AccessMedical</a>
         <a href="#cochrane-library" class="block px-2 py-1 text-sm hover:text-primary translatable">Cochrane Library</a>
+        <a href="#imachek" class="block px-2 py-1 text-sm hover:text-primary translatable">ImaCheck</a>
       </div>
   
       <div>
@@ -160,7 +161,8 @@
       <a href="#nejmhealer" class="block text-gray-700 translatable">NEJMHealer</a>
       <a href="#accessmedical" class="block text-gray-700 translatable">AccessMedical</a>
       <a href="#cochrane-library" class="block text-gray-700 translatable">Cochrane Library</a>
-    </div>
+      <a href="#imachek" class="block px-2 py-1 text-sm hover:text-primary translatable">ImaCheck</a>
+        </div>
   </div>
   
   <div class="group">
@@ -872,6 +874,35 @@
                     </div>
                 </div>
             </div>
+                        <div class="product-card-container" data-subjects="saglik" id="ImaCheck">
+                <div class="flip-card h-full">
+                    <div class="flip-inner h-full">
+                        <div class="flip-front border-blue-400">
+                            <img alt="Transleyt Logo" class="product-image" src="assets/images/imachek.webp" loading="lazy" />
+                            <h3 class="text-xl font-semibold text-center text-primary translatable">ImaChek</h3>
+                            <div class="badge-container">
+                                <span class="badge-label translatable">Yetkili Bölge:</span>
+                                <span class="badge-turkey invisible translatable">Türkiye</span>
+                                <span class="badge-middleeast translatable">Orta Doğu</span>
+                            </div>
+                        </div>
+                        <div class="flip-back bg-blue-50">
+                            <h4 class="text-lg font-bold mb-3 text-blue-800 translatable">ImaChek</h4>
+                            <ul class="text-xs text-black space-y-1 mb-4">
+                                <li class="translatable">✔  Bilimsel makalelerin kalitesini artır</li>
+                                <li class="translatable">✔ Daha hızlı yayımlanma için kontrol süresini azalt</li>
+                                <li class="translatable">✔ Kurumların itibarını koru</li>
+                            </ul>
+                            <div class="flex justify-center space-x-4 mt-auto">
+                                <a href="#brochures" class="bg-primary text-white py-2 px-4 rounded-lg hover:bg-opacity-90 transition text-xs translatable">Broşür</a>
+                                <a href="https://imachek.com/" target="_blank" class="bg-blue-500 text-white py-2 px-4 rounded-lg hover:bg-blue-600 transition text-xs whitespace-nowrap translatable">Erişim Linki</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+
             </div>
     </section>
 
