--- a/index.html
+++ b/index.html
@@ -503,6 +503,34 @@
                 </div>
             </div>
 
+                                    <div class="product-card-container" data-subjects="saglik" id="ImaCheck">
+                <div class="flip-card h-full">
+                    <div class="flip-inner h-full">
+                        <div class="flip-front border-red-400">
+                            <img alt="ImaChek Logo" class="product-image" src="assets/images/imachek.webp" loading="lazy" />
+                            <h3 class="text-xl font-semibold text-center text-primary translatable">ImaChek</h3>
+                            <div class="badge-container">
+                                <span class="badge-label translatable">Yetkili Bölge:</span>
+                                <span class="badge-turkey translatable">Türkiye</span>
+                                <span class="badge-middleeast translatable">Orta Doğu</span>
+                            </div>
+                        </div>
+                        <div class="flip-back bg-blue-50">
+                            <h4 class="text-lg font-bold mb-3 text-blue-800 translatable">ImaChek</h4>
+                            <ul class="text-xs text-black space-y-1 mb-4">
+                                <li class="translatable">✔  Bilimsel makalelerin kalitesini artır</li>
+                                <li class="translatable">✔ Daha hızlı yayımlanma için kontrol süresini azalt</li>
+                                <li class="translatable">✔ Kurumların itibarını koru</li>
+                            </ul>
+                            <div class="flex justify-center space-x-4 mt-auto">
+                                <a href="#brochures" class="bg-primary text-white py-2 px-4 rounded-lg hover:bg-opacity-90 transition text-xs translatable">Broşür</a>
+                                <a href="https://imachek.com/" target="_blank" class="bg-blue-500 text-white py-2 px-4 rounded-lg hover:bg-blue-600 transition text-xs whitespace-nowrap translatable">Erişim Linki</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
             <div class="product-card-container" data-subjects="fen-matematik,muhendislik,saglik,sosyal-bilimler" id="jove-dergiler">
                 <div class="flip-card h-full">
                     <div class="flip-inner h-full">
@@ -869,33 +897,6 @@
                             <div class="flex justify-center space-x-4 mt-auto">
                                 <a href="#brochures" class="bg-primary text-white py-2 px-4 rounded-lg hover:bg-opacity-90 transition text-xs translatable">Broşür</a>
                                 <a href="https://transleyt.com/" target="_blank" class="bg-blue-500 text-white py-2 px-4 rounded-lg hover:bg-blue-600 transition text-xs whitespace-nowrap translatable">Erişim Linki</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-                        <div class="product-card-container" data-subjects="saglik" id="ImaCheck">
-                <div class="flip-card h-full">
-                    <div class="flip-inner h-full">
-                        <div class="flip-front border-blue-400">
-                            <img alt="ImaChek Logo" class="product-image" src="assets/images/imachek.webp" loading="lazy" />
-                            <h3 class="text-xl font-semibold text-center text-primary translatable">ImaChek</h3>
-                            <div class="badge-container">
-                                <span class="badge-label translatable">Yetkili Bölge:</span>
-                                <span class="badge-turkey invisible translatable">Türkiye</span>
-                                <span class="badge-middleeast translatable">Orta Doğu</span>
-                            </div>
-                        </div>
-                        <div class="flip-back bg-blue-50">
-                            <h4 class="text-lg font-bold mb-3 text-blue-800 translatable">ImaChek</h4>
-                            <ul class="text-xs text-black space-y-1 mb-4">
-                                <li class="translatable">✔  Bilimsel makalelerin kalitesini artır</li>
-                                <li class="translatable">✔ Daha hızlı yayımlanma için kontrol süresini azalt</li>
-                                <li class="translatable">✔ Kurumların itibarını koru</li>
-                            </ul>
-                            <div class="flex justify-center space-x-4 mt-auto">
-                                <a href="#brochures" class="bg-primary text-white py-2 px-4 rounded-lg hover:bg-opacity-90 transition text-xs translatable">Broşür</a>
-                                <a href="https://imachek.com/" target="_blank" class="bg-blue-500 text-white py-2 px-4 rounded-lg hover:bg-blue-600 transition text-xs whitespace-nowrap translatable">Erişim Linki</a>
                             </div>
                         </div>
                     </div>
