--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         <a href="#nejmhealer" class="block px-2 py-1 text-sm hover:text-primary translatable">NEJMHealer</a>
         <a href="#accessmedical" class="block px-2 py-1 text-sm hover:text-primary translatable">AccessMedical</a>
         <a href="#cochrane-library" class="block px-2 py-1 text-sm hover:text-primary translatable">Cochrane Library</a>
-        <a href="#imachek" class="block px-2 py-1 text-sm hover:text-primary translatable">ImaCheck</a>
+        <a href="#imachek" class="block px-2 py-1 text-sm hover:text-primary translatable">ImaChek</a>
       </div>
   
       <div>
@@ -161,7 +161,7 @@
       <a href="#nejmhealer" class="block text-gray-700 translatable">NEJMHealer</a>
       <a href="#accessmedical" class="block text-gray-700 translatable">AccessMedical</a>
       <a href="#cochrane-library" class="block text-gray-700 translatable">Cochrane Library</a>
-      <a href="#imachek" class="block px-2 py-1 text-sm hover:text-primary translatable">ImaCheck</a>
+      <a href="#imachek" class="block px-2 py-1 text-sm hover:text-primary translatable">ImaChek</a>
         </div>
   </div>
   
@@ -503,7 +503,7 @@
                 </div>
             </div>
 
-                                    <div class="product-card-container" data-subjects="saglik" id="ImaCheck">
+                                    <div class="product-card-container" data-subjects="saglik" id="imachek>
                 <div class="flip-card h-full">
                     <div class="flip-inner h-full">
                         <div class="flip-front border-red-400">
