--- a/index.html
+++ b/index.html
@@ -503,7 +503,7 @@
                 </div>
             </div>
 
-                                    <div class="product-card-container" data-subjects="saglik" id="imachek>
+            <div class="product-card-container" data-subjects="saglik" id="imachek">
                 <div class="flip-card h-full">
                     <div class="flip-inner h-full">
                         <div class="flip-front border-red-400">
