--- a/index.html
+++ b/index.html
@@ -515,8 +515,8 @@
                     <span class="badge-middleeast translatable">Orta Doğu</span>
                 </div>
             </div>
-            <div class="flip-back bg-blue-50">
-                <h4 class="text-lg font-bold mb-3 text-blue-800 translatable">ImaChek</h4>
+            <div class="flip-back bg-red-50">
+                <h4 class="text-lg font-bold mb-3 text-red-800 translatable">ImaChek</h4>
                 <ul class="text-xs text-black space-y-1 mb-4">
                     <li class="translatable">✔ Bilimsel makalelerin kalitesini artır</li>
                     <li class="translatable">✔ Daha hızlı yayımlanma için kontrol süresini azalt</li>
