--- a/index.html
+++ b/index.html
@@ -1193,7 +1193,7 @@
                 <div class="flex items-center mb-4">
                     <img src="assets/images/libedge_logo.webp" alt="LibEdge Logo" class="h-12 w-auto mr-3">
                     <div>
-                        <h3 class="text-xl font-bold translatable">LibEdge</h3>
+                        <!-- <h3 class="text-xl font-bold translatable">LibEdge</h3> -->
                         <p class="text-sm text-gray-300 translatable">Eğitim ve Danışmanlık</p>
                     </div>
                 </div>
