--- a/index.html
+++ b/index.html
@@ -507,7 +507,7 @@
     <div class="flip-card h-full">
         <div class="flip-inner h-full">
             <div class="flip-front border-red-400">
-                <img alt="ImaChek Logo" class="product-image" src="assets/images/imachek.webp" loading="lazy" />
+                <img alt="ImaChek Logo" class="product-image" src="assets/images/imachek0.webp" loading="lazy" />
                 <h3 class="text-xl font-semibold text-center text-primary translatable">ImaChek</h3>
                 <div class="badge-container">
                     <span class="badge-label translatable">Yetkili Bölge:</span>
