--- a/index.html
+++ b/index.html
@@ -417,6 +417,35 @@
                 </div>
             </div>
 
+            <div class="product-card-container" data-subjects="yapay-zeka" id="assistin">
+  <div class="flip-card h-full">
+    <div class="flip-inner h-full">
+      <div class="flip-front border-blue-400">
+        <img alt="Assistin Logo" class="product-image" src="assets/images/assistin_logo.webp" loading="lazy" />
+        <h3 class="text-xl font-semibold text-center text-primary translatable">Assistin</h3>
+        <div class="badge-container">
+          <span class="badge-label translatable">Yetkili Bölge:</span>
+          <span class="badge-turkey translatable">Türkiye</span>
+          <span class="badge-middleeast translatable">Orta Doğu</span>
+        </div>
+      </div>
+      <div class="flip-back bg-blue-50">
+        <h4 class="text-lg font-bold mb-3 text-blue-800 translatable">Assistin</h4>
+        <ul class="text-xs text-black space-y-1 mb-4">
+          <li class="translatable">✔ Yapay zeka destekli asistan çözümleri</li>
+          <li class="translatable">✔ Kurumlar için verimlilik ve hız</li>
+          <li class="translatable">✔ Kullanıcı deneyimini geliştiren yenilikçi teknoloji</li>
+        </ul>
+        <div class="flex justify-center space-x-4 mt-auto">
+          <a href="#brochures" class="bg-primary text-white py-2 px-4 rounded-lg hover:bg-opacity-90 transition text-xs translatable">Broşür</a>
+          <a href="http://assistin.ai/" target="_blank" class="bg-blue-500 text-white py-2 px-4 rounded-lg hover:bg-blue-600 transition text-xs whitespace-nowrap translatable">Erişim Linki</a>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+
             <div class="product-card-container" data-subjects="saglik" id="primal-pictures">
                 <div class="flip-card h-full">
                     <div class="flip-inner h-full">
