--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
         <a href="#pangram" class="block text-gray-700 translatable">Pangram</a>
         <a href="#chatpdf" class="block px-2 py-1 text-sm hover:text-primary translatable">ChatPDF</a>
         <a href="#wonders" class="block px-2 py-1 text-sm hover:text-primary translatable">Wonders</a>
+        <a href="#assistin" class="block px-2 py-1 text-sm hover:text-primary translatable">Assistin</a>
         <a href="#piri-discovery" class="block px-2 py-1 text-sm hover:text-primary translatable">Piri Keşif</a>
         <a href="#transleyt" class="block px-2 py-1 text-sm hover:text-primary translatable">Transleyt</a>
       </div>
