--- a/index.html
+++ b/index.html
@@ -1258,9 +1258,7 @@
         <!-- Ek Bilgi -->
         <div class="mt-6 pt-4 border-t border-gray-700">
             <div class="text-center">
-                <p class="text-xs text-gray-400 translatable">
-                    Türkiye ve Orta Doğu bölgesinde eğitim teknolojileri ve akademik kaynaklarda güvenilir iş ortağınız
-                </p>
+                <p class="text-xs text-gray-400 translatable">Türkiye ve Orta Doğu bölgesinde eğitim teknolojileri ve akademik kaynaklarda güvenilir iş ortağınız</p>
             </div>
         </div>
     </div>
