--- a/index.html
+++ b/index.html
@@ -1248,10 +1248,11 @@
                 
                 <!-- Yasal Linkler -->
                 <div class="flex flex-wrap justify-center md:justify-end space-x-6 text-sm">
-                    <a href="#" class="text-gray-300 hover:text-white transition-colors duration-200 translatable">Gizlilik Politikası</a>
-                    <a href="#" class="text-gray-300 hover:text-white transition-colors duration-200 translatable">Kullanım Şartları</a>
-                    <a href="#" class="text-gray-300 hover:text-white transition-colors duration-200 translatable">Çerez Politikası</a>
+                <a href="/privacy.html" class="text-gray-300 hover:text-white transition-colors duration-200 translatable">Gizlilik Politikası</a>
+                <a href="/terms.html" class="text-gray-300 hover:text-white transition-colors duration-200 translatable">Kullanım Şartları</a>
+                <a href="/cookies.html" class="text-gray-300 hover:text-white transition-colors duration-200 translatable">Çerez Politikası</a>
                 </div>
+
             </div>
         </div>
 
