--- a/privacy.html
+++ b/privacy.html
@@ -1,87 +1,76 @@
 <!DOCTYPE html>
 <html lang="tr">
-
 <head>
-    <meta charset="utf-8" />
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="LibEdge Gizlilik Politikası - KVKK ve GDPR uyumlu veri işleme bilgisi">
-    <title>Gizlilik Politikası | LibEdge Eğitim ve Danışmanlık</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" />
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <title>Gizlilik Politikası ve Aydınlatma Metni - LibEdge</title>
+    <style>
+        body { font-family: Arial, sans-serif; line-height: 1.6; max-width: 800px; margin: 40px auto; padding: 20px; }
+        h1, h2, h3 { color: #333; }
+        table { width: 100%; border-collapse: collapse; margin-bottom: 20px; }
+        th, td { border: 1px solid #ddd; padding: 8px; text-align: left; }
+        th { background-color: #f2f2f2; }
+    </style>
 </head>
+<body>
 
-<body class="bg-gray-50 dark:bg-gray-900 text-gray-800 dark:text-gray-200 min-h-screen">
+    <h1>Gizlilik Politikası ve Kişisel Verilerin İşlenmesi Aydınlatma Metni</h1>
+    <p><strong>Son Güncelleme Tarihi:</strong> [Günün Tarihi]</p>
 
-    <!-- Header ve Navbar -->
-    <header class="bg-primary text-white py-6 px-4">
-        <div class="max-w-7xl mx-auto flex flex-col sm:flex-row justify-between items-center relative">
-            <!-- Header içeriği (email, telefon, logo, sosyal ikonlar) -->
-            <!-- Mevcut header içeriğiniz buraya gelir -->
-        </div>
-    </header>
+    <h2>1. Veri Sorumlusu Kimliği</h2>
+    <p>6698 sayılı Kişisel Verilerin Korunması Kanunu (KVKK) ve Genel Veri Koruma Yönetmeliği (GDPR) uyarınca, kişisel verileriniz aşağıda bilgileri bulunan <strong>LibEdge Eğitim ve Danışmanlık</strong> (Marka/Girişim) tarafından Veri Sorumlusu sıfatıyla işlenmektedir.</p>
+    <ul>
+        <li><strong>Unvan:</strong> LibEdge Eğitim ve Danışmanlık</li>
+        <li><strong>Web Sitesi:</strong> https://libedge-website.pages.dev/</li>
+        <li><strong>İletişim E-posta:</strong> [LÜTFEN E-POSTA ADRESİNİZİ GİRİN]</li>
+    </ul>
 
-    <nav class="bg-white shadow-md sticky top-0 z-10">
-        <div class="max-w-7xl mx-auto px-4 py-3 flex justify-between items-center">
-            <!-- Navbar içeriği (logo, ürünler, menü, dil butonu) -->
-            <!-- Mevcut navbar içeriğiniz buraya gelir -->
-        </div>
-    </nav>
+    <h2>2. Toplanan Kişisel Veriler ve İşleme Amaçları</h2>
+    <p>Kişisel verileriniz, web sitesi üzerinden yürütülen mevcut faaliyetler ve gelecekteki hizmetler göz önüne alınarak aşağıdaki amaçlar ve hukuki sebeplerle işlenmektedir:</p>
+    
+    <table>
+        <thead>
+            <tr>
+                <th>Veri Kategorisi</th>
+                <th>İşleme Amacı</th>
+                <th>Hukuki Sebep (KVKK/GDPR)</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td><strong>Kimlik ve İletişim</strong> (Ad, Soyad, E-posta, Tel No)</td>
+                <td>Bilgilendirme ve danışmanlık taleplerinin yanıtlanması; Hizmet öncesi iletişim faaliyetlerinin yürütülmesi.</td>
+                <td>Açık Rıza / Sözleşmenin İfası Öncesi Görüşme</td>
+            </tr>
+            <tr>
+                <td><strong>İşlem Güvenliği</strong> (IP Adresi, Log Kayıtları)</td>
+                <td>Siber güvenliğin sağlanması; Hukuki uyuşmazlıkların giderilmesi ve yasal yükümlülüklerin yerine getirilmesi.</td>
+                <td>Meşru Menfaat / Yasal Yükümlülük</td>
+            </tr>
+            <tr>
+                <td><strong>Pazarlama/Analiz</strong> (Çerez Verileri, Ziyaret Sıklığı)</td>
+                <td>Web sitesi performansının ölçülmesi ve geliştirilmesi; Pazarlama faaliyetlerinin yürütülmesi.</td>
+                <td>Açık Rıza (Zorunlu olmayan çerezler için)</td>
+            </tr>
+        </tbody>
+    </table>
 
-    <!-- Ana İçerik -->
-    <main class="max-w-4xl mx-auto px-6 py-12">
-        <h1 class="text-3xl font-bold mb-6 text-indigo-700 dark:text-indigo-300">Gizlilik Politikası / Privacy Policy</h1>
-        <p class="mb-4"><strong>Yürürlük Tarihi / Effective Date:</strong> 9 Ekim 2025</p>
+    <h2>3. Kişisel Verilerin Aktarımı (Yurt İçi/Yurt Dışı)</h2>
+    <p>Kişisel verileriniz, web sitesinin barındırılması ve dağıtımı için kullanılan <strong>GitHub</strong> ve <strong>Cloudflare</strong> gibi altyapı hizmet sağlayıcılarının sunucularının yurt dışında bulunması nedeniyle yurt dışına aktarılmaktadır. Bu aktarım, veri güvenliğini sağlamak amacıyla gerekli teknik ve idari tedbirler alınarak gerçekleştirilmektedir.</p>
+    
+    <h2>4. Veri Sahibinin Hakları (KVKK Madde 11 & GDPR Hakları)</h2>
+    <p>KVKK Madde 11 uyarınca Veri Sorumlusu’na başvurarak;</p>
+    <ul>
+        <li>Kişisel verilerinizin işlenip işlenmediğini öğrenme,</li>
+        <li>İşlenme amacını ve amacına uygun kullanılıp kullanılmadığını bilme,</li>
+        <li>Eksik veya yanlış işlenmişse düzeltilmesini isteme,</li>
+        <li>İşlenmesini gerektiren sebepler ortadan kalkarsa silinmesini/yok edilmesini isteme (GDPR Unutulma Hakkı),</li>
+        <li>Kanuna aykırı işlenme nedeniyle zarara uğramanız halinde zararınızın giderilmesini talep etme haklarına sahipsiniz.</li>
+    </ul>
+    <p>Başvurularınızı yukarıda belirtilen e-posta adresine iletebilirsiniz.</p>
 
-        <p class="mb-4">
-            <strong>LibEdge Eğitim ve Danışmanlık</strong> (“LibEdge”, “biz”), kullanıcı gizliliğini korumayı taahhüt eder.
-            Bu politika KVKK ve GDPR ile uyumludur ve kişisel verilerin nasıl toplandığını, işlendiğini ve korunduğunu açıklar.
-        </p>
-
-        <h2 class="text-2xl mt-8 mb-2 font-semibold">Toplanan Veriler / Data We Collect</h2>
-        <ul class="list-disc pl-6 mb-4 space-y-1">
-            <li>Ad, soyad, e-posta / Name, surname, email address</li>
-            <li>Kurum veya unvan bilgisi (isteğe bağlı) / Organization (optional)</li>
-            <li>İletişim mesajı / Contact message</li>
-            <li>IP adresi, tarayıcı bilgisi / IP address, browser info</li>
-        </ul>
-
-        <h2 class="text-2xl mt-8 mb-2 font-semibold">Kullanım Amaçları / Purposes of Processing</h2>
-        <ul class="list-disc pl-6 mb-4 space-y-1">
-            <li>İletişim taleplerine yanıt vermek / Respond to inquiries</li>
-            <li>Deneme erişimi veya öneri formlarını işlemek / Process trial and suggestion forms</li>
-            <li>Hizmet kalitesini geliştirmek / Improve services</li>
-            <li>Yasal yükümlülükleri yerine getirmek / Fulfill legal obligations</li>
-        </ul>
-
-        <h2 class="text-2xl mt-8 mb-2 font-semibold">Hukuki Dayanak / Legal Basis</h2>
-        <p class="mb-4">
-            Kişisel veriler, açık rıza, sözleşme gereği veya yasal zorunluluk kapsamında işlenebilir.
-            / Personal data are processed under consent, contractual necessity, or legal obligation.
-        </p>
-
-        <h2 class="text-2xl mt-8 mb-2 font-semibold">Saklama ve Güvenlik / Data Retention & Security</h2>
-        <p class="mb-4">
-            Veriler güvenli şekilde GitHub Pages ve Cloudflare üzerinde saklanır. / Data are securely stored on GitHub Pages and Cloudflare infrastructure.
-        </p>
-
-        <h2 class="text-2xl mt-8 mb-2 font-semibold">Haklarınız / Your Rights</h2>
-        <p class="mb-4">
-            KVKK ve GDPR kapsamında: erişim, düzeltme, silme, itiraz ve taşınabilirlik haklarınız vardır.
-            Talepler için: <a href="mailto:info@libedge.com" class="text-indigo-600 dark:text-indigo-400 underline">info@libedge.com</a>
-        </p>
-    </main>
-
-    <!-- Footer -->
-    <footer class="bg-gray-100 dark:bg-gray-800 text-center py-6 mt-12 text-sm">
-        <p class="text-gray-600 dark:text-gray-400">
-            © 2025 LibEdge Eğitim ve Danışmanlık — 
-            <a href="/privacy.html" class="hover:underline">Gizlilik Politikası</a> |
-            <a href="/terms.html" class="hover:underline">Kullanım Şartları</a> |
-            <a href="/cookies.html" class="hover:underline">Çerez Politikası</a>
-        </p>
-    </footer>
+    <h2>5. İleriye Dönük Planlar Hakkında Bilgilendirme</h2>
+    <p>İlerleyen dönemde kayıtlı kullanıcı altyapısı kurulması ve ödeme işlemleri eklenmesi durumunda; sözleşme ifası amacıyla kimlik, finansal veriler ve adres bilgileri toplanacak, bu kapsamda Gizlilik Politikası ayrıca güncellenecektir.</p>
 
 </body>
 </html>
