--- a/privacy.html
+++ b/privacy.html
@@ -90,11 +90,11 @@
         <p class="text-sm text-gray-500 mb-8"><strong>Son Güncelleme Tarihi:</strong> [Günün Tarihi]</p>
 
         <h2 class="text-2xl font-bold mt-8 mb-4 border-l-4 border-blue-600 pl-2 text-gray-800">1. Veri Sorumlusu Kimliği (Data Controller)</h2>
-        <p class="mb-4">Kişisel Verilerin Korunması Kanunu (KVKK) ve Genel Veri Koruma Yönetmeliği (GDPR) uyarınca Veri Sorumlusu:</p>
+        <p class="mb-4">Kişisel Verilerin Korunması Kanunu (KVKK) ve Genel Veri Koruma Yönetmeliği (GDPR) uyarınca Veri Sorumlusu: Semih Bakar</p>
         <ul class="list-disc ml-6 mb-6 space-y-1">
             <li><strong>Unvan:</strong> LibEdge Eğitim ve Danışmanlık (Marka/Girişim)</li>
-            <li><strong>Web Sitesi:</strong> https://libedge-website.pages.dev/</li>
-            <li><strong>İletişim E-posta:</strong> [LÜTFEN İLETİŞİM E-POSTA ADRESİNİZİ GİRİN]</li>
+            <li><strong>Web Sitesi:</strong> https://libedge.com/</li>
+            <li><strong>İletişim E-posta:</strong> info@libedge.com</li>
         </ul>
 
         <h2 class="text-2xl font-bold mt-8 mb-4 border-l-4 border-blue-600 pl-2 text-gray-800">2. Toplanan Veriler ve İşleme Amaçları</h2>
