--- a/terms.html
+++ b/terms.html
@@ -108,7 +108,7 @@
         <p class="mb-4">Web sitesi ve içerikleri **"olduğu gibi"** esasına göre sunulmaktadır. LibEdge, sitenin kesintisiz, hatasız veya güvenli olacağına dair herhangi bir garanti vermez. İçerikteki bilgilerin doğruluğu konusunda sorumluluk kabul edilmez.</p>
         
         <h2 class="text-2xl font-bold mt-8 mb-4 border-l-4 border-blue-600 pl-2 text-gray-800">5. Uygulanacak Hukuk ve Yetkili Mahkeme</h2>
-        <p class="mb-4">Bu Şartların yorumlanmasında ve uygulanmasında **Türk Hukuku** esas alınacaktır. Doğabilecek her türlü uyuşmazlığın çözümünde **[LÜTFEN ŞİRKETİNİZİN BULUNDUĞU ŞEHİR] Mahkemeleri ve İcra Daireleri** yetkilidir.</p>
+        <p class="mb-4">Bu Şartların yorumlanmasında ve uygulanmasında Türk Hukuku esas alınacaktır. Doğabilecek her türlü uyuşmazlığın çözümünde İzmir Mahkemeleri ve İcra Daireleri yetkilidir.</p>
         
     </main>
 
