--- a/terms.html
+++ b/terms.html
@@ -88,7 +88,7 @@
     <main class="flex-grow max-w-7xl mx-auto p-4 md:p-8 bg-white shadow-lg my-8 rounded-lg">
   
         <h1 class="text-3xl md:text-4xl font-extrabold mb-6 border-b pb-3 text-gray-900">Web Sitesi Kullanım Şartları</h1>
-        <p class="text-sm text-gray-500 mb-8"><strong>Son Güncelleme Tarihi:</strong> [Günün Tarihi]</p>
+        <p class="text-sm text-gray-500 mb-8"><strong>Son Güncelleme Tarihi:</strong> 9.10.2025</p>
 
         <h2 class="text-2xl font-bold mt-8 mb-4 border-l-4 border-blue-600 pl-2 text-gray-800">1. Taraflar ve Kabul</h2>
         <p class="mb-4">Bu Kullanım Şartları ("Şartlar"), LibEdge Eğitim ve Danışmanlık ("LibEdge") ile web sitesini ziyaret eden veya kullanan kişi ("Kullanıcı") arasındaki ilişkiyi düzenler. Web sitesine erişim sağlayarak, bu Şartları kabul etmiş sayılırsınız.</p>
